--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 40px;
+}
+
+.container {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+
+.container > div {
+  max-width: 240px;
 }
 
 /* do not edit this footer */
